--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "auto-create-issuse-action",
   "version": "1.0.0",
-  "description": "1. 在GitHub上获取[Personal access tokens](https://github.com/settings/tokens)（个人访问令牌）;",
+  "description": "auto-create-issuse-action",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@vercel/ncc": "^0.33.0"
+  }
 }
